fix viewport on ios safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,6 +132,12 @@
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+  --real-vh: 100vh;
+}
+@supports (height: 100dvh) {
+  :root {
+    --real-vh: 100dvh;
+  }
 }
 
 .dark {
